Update jvm.config
Signed-off-by: 梦里不知身是客 <liang.tang.cx@gmail.com>