@@ -1,8 +1,13 @@
 -Xmx1024m
+<<<<<<< PATCH SET (a536c5 Update jvm.config)
+-Xms1024m
+=======
 -Xms512m
+>>>>>>> BASE      (c6cc54 build(deps): Bump org.apache.maven.plugins:maven-javadoc-plu)
 -XX:+UnlockDiagnosticVMOptions
 -XX:+ExitOnOutOfMemoryError
 -XX:+IgnoreUnrecognizedVMOptions
 -XX:+UseCodeCacheFlushing
 -XX:-TieredCompilation
 -XX:TieredStopAtLevel=1
+-XX:+UseZGC
